# toolhub

./: Procfile  README.md  Taskfile.yml  docker-compose.test.yml  pyproject.toml
.beads/: deletions.jsonl  issues.jsonl
.claude-plugin/: marketplace.json
docs/: TOOLHUB.md
migrations/: 001_initial_schema.sql
scripts/: toolhub-parallel-search.sh
src/toolhub/: __init__.py  cli.py  client.py  config.py  daemon.py  paths.py  registry.py  scheduler.py
src/toolhub/crawler/: __init__.py  base.py  github.py  llmstxt.py  website.py
src/toolhub/indexer/: __init__.py  chunker.py  embedder.py  openapi.py
src/toolhub/store/: __init__.py  knowledge.py  lance.py  operations.py  reports.py  schemas.py  search.py
tests/: __init__.py  conftest.py  test_api.py  test_entity_schema.py  test_evidence.py  test_fixtures.py  test_knowledge_store.py  test_reports.py  test_taxonomy.py
toolhub-plugin/.claude-plugin/: plugin.json
toolhub-plugin/agents/: toolhub-librarian.md  toolhub-researcher.md
toolhub-plugin/commands/: find-docs.md  research-company.md  research-tool.md  research.md  search.md
toolhub-plugin/skills/find-docs/: SKILL.md
toolhub-plugin/skills/using-toolhub/: SKILL.md
